@@ -87,6 +87,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 473944  Handle mold linker split RW PT_LOAD segments correctly
 474332  aligned_alloc under Valgrind returns nullptr when alignment is not a multiple of sizeof(void *)
 475650  DRD does not work with C11 threads
+475652  Missing suppression for __wcsncpy_avx2 (strncpy-avx2.S:308)?
 n-i-bz  Allow arguments with spaces in .valgrindrc files
 n-i-bz  FreeBSD fixed reading of Valgrind tools own debuginfo
 
